force-app/main/default/objects/Booking__c/fields/End_Location__c.field-meta.xml
<CustomField>
    <fullName>End_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Bookings (End Location)</relationshipLabel>
    <relationshipName>Bookings1</relationshipName>
    <type>Lookup</type>
</CustomField>