force-app/main/default/objects/Booking__c/fields/No_Of_Hours__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Hours__c</fullName>
    <formula>ROUND(( End_Datetime__c - Start_Datetime__c) * 24, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Of Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>