force-app/main/default/objects/Booking__c/fields/Start_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Start_Datetime__c</fullName>
    <label>Start Datetime</label>
    <type>DateTime</type>
</CustomField>