force-app/main/default/objects/Booking__c/fields/Start_Location__c.field-meta.xml
<CustomField>
    <fullName>Start_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Start Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Start Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>